Made images fully dynamic, added category selector to the image picker.
